[package]
name = "rriscv"
version = "0.1.0"
edition = "2021"
default-run = "rriscv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = { version = "0.36.7" }
gdb-remote-protocol = { git = "https://github.com/luser/rust-gdb-remote-protocol" }
env_logger = "0.11.8"
log = "0.4.27"
signal-hook = "0.3.17"
term = "1.0.1"
log4rs = { version = "1.3.0" }
config = "0.15.11"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }

[profile.dev]
opt-level = 0
debug = true

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
#rustflags = ["-C", "target-cpu=native"]
#panic = "abort"
